objects/ccrz__E_ProductItemI18N__c.object
<CustomObject>
    <description>Locale-specific version of product - used for localizing the name and description related fields of the product.</description>
    <fields>
        <fullName>ccrz__AlternateName__c</fullName>
        <inlineHelpText>This field will be used for the Product Name if it is not null. This allows for Product Names with a length of 255 characters</inlineHelpText>
        <label>Alternate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>Locale that is being defined by this entry</description>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDescRT__c</fullName>
        <description>Rich Text field for the Long description in the language referenced by the locale.</description>
        <label>LongDescRT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDesc__c</fullName>
        <description>Long description in the language referenced by the locale</description>
        <label>LongDesc</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <description>Reference to the product being localized</description>
        <label>Product Item</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>ProductLocale</relationshipLabel>
        <relationshipName>Product_Item_I18Ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOId__c</fullName>
        <description>A shortened name for the product. This is used when constructing friendly URLs.</description>
        <externalId>true</externalId>
        <inlineHelpText>A shortened name for the product. This is used when constructing friendly URLs.</inlineHelpText>
        <label>SEO Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SKU__c</fullName>
        <formula>ccrz__Product__r.ccrz__SKU__c</formula>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDescRT__c</fullName>
        <description>Rich Text field for the Short description in the language referenced by the locale.</description>
        <label>ShortDescRT</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDesc__c</fullName>
        <description>Short description in the language referenced by the locale</description>
        <label>ShortDesc</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasure__c</fullName>
        <description>Unit of measure in the language referenced by the locale</description>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Product Item I18N</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__SKU__c</columns>
        <columns>ccrz__Locale__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Item I18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Item I18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>